# pipenv-issue-4553

./: Dockerfile  Pipfile  Readme.md
foo/: setup.cfg
foo/src/foo/: __init__.py
nonexistent/: setup.cfg
nonexistent/src/nonexistent/: __init__.py
