[metadata]
name             = nonexistent
version          = 1
author           = Calidae
author_email     = n1ngu@riseup.net
description      = Non-existent project
license          = GPLv3+
platform         = any
classifiers      =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
python_requires  = >=3.8
packages         = nonexistent
package_dir      =
    =src
